--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=ChandanaG1697_my-first-react-app
-sonar.organization= Chandana Govindaraj
+sonar.organization=chandanag1697 
 sonar.sources=src
 sonar.host.url=https://sonarcloud.io
 sonar.login=31b2c48daaade1d61dab0bc5146ba2b2f64a1199
